<resources>
    <string name="app_name">"CultuFinanzas "</string>

    <string name="action_setting">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_ayuda">Ayuda</string>

    <string name="item_eventos">Eventos</string>
    <string name="item_consejos">Consejos básicos</string>
    <string name="item_glosario">Glosario</string>
    <string name="item_acerca">Acerca</string>
    <string name="item_inicia">Primeros pasos</string>
    <string name="item_comenzar">Comenzar  la aplicación</string>
    <string name="item_configuracion">Configuración</string>

    <string name="actividad_confi">Configuración</string>


    <string name="titulo_tab_a">A</string>
    <string name="titulo_tab_b">B</string>
    <string name="titulo_tab_c">C</string>
    <string name="titulo_tab_d">D</string>
    <string name="titulo_tab_e">E</string>
    <string name="titulo_tab_f">F</string>
    <string name="titulo_tab_g">G</string>
    <string name="titulo_tab_h">H</string>
    <string name="titulo_tab_i">I</string>
    <string name="titulo_tab_j">J</string>
    <string name="titulo_tab_l">L</string>
    <string name="titulo_tab_m">M</string>
    <string name="titulo_tab_n">N</string>
    <string name="titulo_tab_o">O</string>
    <string name="titulo_tab_p">P</string>
    <string name="titulo_tab_r">R</string>
    <string name="titulo_tab_s">S</string>
    <string name="titulo_tab_t">T</string>
    <string name="titulo_tab_seguro">Seguro</string>
    <string name="titulo_tab_ahorro">Ahorro</string>
    <string name="titulo_tab_credito">Crédito</string>
    <string name="titulo_tab_inversion">Inversión</string>
    <string name="cambiar_idioma">Esoger lenguaje</string>

     <string name="large_text">
    "Acerca de la aplicación.\n\n"

    "Esta aplicación va dirigida a los adolecentes  que desean ampliar su panorama sobre las finanzas personales.\n\n"
    "La intención es que el usuario tenga a la mano información que permita desarrollar habilidades y confianza, para ser conscientes de riesgos y oportunidades financieras.\n\n  "


    "Agradecimientos .\n\n"

    "Se agradece  a la M en C Lizbeth Elena Guzman  Escarza docente del programa educativo de Ingenería Financiera, "
    "por su apoyo para validar los contenidos  de la aplicación   "



     </string>



    <string name="texto_no_tarjetas">Para elaborar un presupuesto, siga los sencillospasos que se describen a continuación</string>

    <string name="etiqueta_carrito">CultuFinanzas</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="title_activity_tuto_inicio">TutoInicio</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_omitir">Omitir</string>
    <string name="terminar_tutorial">Terminar</string>
    <string name="consejos">Dentro de esta sección se encuentrán una serie de consejos   relacionados con las  finanzas personales</string>
    <string name="explicación_glosario"> En está sección puedes encontrar las palabras más importantes dentro del ámbito de las finanzas personales</string>
    <string name="inicia_app">Al ingresar a la aplicacion existen 3 secciones importantes las cuales son: consejos básicos, glosario y eventos</string>
    <string name="comienza">Ahora que sabés las funciones de la aplicación ya puedes comenzar a usarla </string>
    <string name="explicacion_eventod">En esta sección puedes ver eventos   relacinados con la  educación financiera</string>
</resources>
