<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/ic_consejo"
            android:title="@string/item_consejos" />
        <item
            android:id="@+id/item_categorias"
            android:icon="@drawable/ic_glosario"
            android:title="@string/item_glosario" />
        <item
            android:id="@+id/item_eventos"
            android:icon="@drawable/categorias"
            android:title="@string/item_eventos" />
        <item
            android:id="@+id/item_acerca"
            android:icon="@drawable/ic_acerca"
            android:title="@string/item_acerca" />


        <item
            android:icon="@drawable/configuracion"
            android:id="@+id/item_configuracion"
            android:title="@string/item_configuracion" />
    </group>

</menu>